p2/confs/app1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one-deployment
  labels:
    app: app-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
      - name: app-one
        image: belaboros/hello-kubernetes:1.10.1b
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-one-service
spec:
  selector:
    app: app-one
  ports:
    - protocol: TCP
      port: 80
