p2/confs/app3-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three-deployment
  labels:
    app: app-three
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
      - name: app-three
        image: belaboros/hello-kubernetes:1.10.1b
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-three-service
spec:
  selector:
    app: app-three
  ports:
    - protocol: TCP
      port: 80
